--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.2.11",
     "@grpc/proto-loader": "^0.5.6",
+    "grpc-errors": "^1.1.4",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0"
   }
