--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@grpc/proto-loader": "^0.5.6",
     "grpc-errors": "^1.1.4",
     "lodash.get": "^4.4.2",
-    "lodash.isequal": "^4.5.0"
+    "lodash.isequal": "^4.5.0",
+    "yaml": "^1.10.2"
   }
 }
